name:           StateTExample
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Andy Shiue

executable StateTExample
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   mtl >=2.1.2 && <2.2
  ghc-options:     -Wall

library 
  build-depends:   
                   base >= 4,
                   mtl >=2.1.2 && <2.2,
                   parsec >=3.1.3 && <3.2,
                   containers >=0.5.0 && <0.6
  hs-source-dirs:  src
  ghc-options:     -Wall

